--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-python-telegram-bot==20.3
-gspread==5.11.3
-oauth2client==4.1.3
-requests==2.31.0
+python-telegram-bot==20.7
 nest_asyncio
 google-api-python-client
+google-auth
+google-auth-oauthlib
+gspread
+oauth2client
+fastapi
+uvicorn
