--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 python-telegram-bot==20.7
 nest_asyncio
-gspread
 google-api-python-client
+google-auth
+google-auth-oauthlib
+gspread
 oauth2client
 fastapi
 uvicorn
