Final stable Telegram bot with FastAPI + Auto-delete + Render support
- Removed all legacy Updater code causing crashes on Render
- Used ApplicationBuilder correctly without polling
- Integrated FastAPI with webhook-based deployment
- Added auto-delete support for bot & user messages
- Final stable version tested on PTB 20.7 and Python 3.13
- Updated requirements.txt for correct dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-python-telegram-bot==20.7
 fastapi
 uvicorn
-nest_asyncio
-google-api-python-client
+python-telegram-bot==20.7
+gspread
 google-auth
 google-auth-oauthlib
-gspread
+google-auth-httplib2
+google-api-python-client
 oauth2client
+nest_asyncio
