--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
-uvicorn
 python-telegram-bot==20.7
-gspread
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
-oauth2client
-nest_asyncio
+fastapi==0.115.2
+uvicorn==0.35.0
+google-api-python-client==2.107.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.56.0
+oauth2client==4.1.3
+nest_asyncio==1.6.0
