--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-python-telegram-bot[job-queue]==20.7
-fastapi==0.115.2
-uvicorn==0.35.0
+python-telegram-bot==20.8
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 gspread==5.12.4
+google-auth==2.23.4
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.1
